@@ -2,10 +2,13 @@ package com.dnastack.ga4gh.dataconnect.adapter.trino;
 
 import brave.Tracer;
 import brave.Tracing;
+import com.dnastack.ga4gh.dataconnect.ApplicationConfig;
 import com.dnastack.ga4gh.dataconnect.DataModelSupplier;
+import com.dnastack.ga4gh.dataconnect.adapter.trino.exception.TrinoNoSuchCatalogException;
 import com.dnastack.ga4gh.dataconnect.adapter.trino.exception.TrinoUserUnauthorizedException;
 import com.dnastack.ga4gh.dataconnect.model.DataModel;
 import com.dnastack.ga4gh.dataconnect.model.TableData;
+import com.dnastack.ga4gh.dataconnect.model.TablesList;
 import com.dnastack.ga4gh.dataconnect.repository.QueryJob;
 import com.dnastack.ga4gh.dataconnect.repository.QueryJobDao;
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -22,6 +25,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.springframework.http.HttpStatus;
 import org.springframework.mock.web.MockHttpServletRequest;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.io.UncheckedIOException;
 import java.net.URI;
@@ -45,12 +49,15 @@ public class TrinoDataConnectAdapterTest {
     private Tracing tracing;
     private Tracer.SpanInScope spanInScope;
 
-    /** The object under test */
+    /**
+     * The object under test
+     */
     TrinoDataConnectAdapter dataConnectAdapter;
 
     /**
      * The data model that will always be returned by the DataModelSupplier. Tests can modify this before calling
-     * into dataConnectAdapter. */
+     * into dataConnectAdapter.
+     */
     DataModel fakeDataModel;
 
     /**
@@ -95,6 +102,9 @@ public class TrinoDataConnectAdapterTest {
             log.info("Something called MockTrinoClient.killQuery({})", nextPageUrl);
         }
     }
+
+    private ApplicationConfig mockApplicationConfig;
+
     @Before
     public void setUp() throws Exception {
         tracing = Tracing.newBuilder().build();
@@ -127,8 +137,11 @@ public class TrinoDataConnectAdapterTest {
                 null);
         DataModelSupplier dataModelSupplier = tableName -> fakeDataModel;
 
+        mockApplicationConfig = mock(ApplicationConfig.class);
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet()); // Default: no hidden catalogs
+
         dataConnectAdapter = new TrinoDataConnectAdapter(
-                mockTrinoClient, jdbi, null, List.of(dataModelSupplier), tracing
+                mockTrinoClient, jdbi, mockApplicationConfig, List.of(dataModelSupplier), tracing
         );
     }
 
@@ -136,6 +149,20 @@ public class TrinoDataConnectAdapterTest {
     public void tearDown() throws Exception {
         spanInScope.close();
         tracing.close();
+    }
+
+    private MockHttpServletRequest createRequestWithForwardedHeaders() {
+        MockHttpServletRequest request = new MockHttpServletRequest();
+        request.addHeader("X-Forwarded-Proto", "http");
+        request.addHeader("X-Forwarded-Host", "test.host");
+        request.addHeader("X-Forwarded-Port", "1234");
+        request.addHeader("X-Forwarded-Prefix", "/testprefix");
+        request.setContextPath(""); // Important for ServletUriComponentsBuilder fallback
+        return request;
+    }
+
+    private String getExpectedBaseUrl() {
+        return "http://test.host:1234/testprefix";
     }
 
     @Test
@@ -151,37 +178,37 @@ public class TrinoDataConnectAdapterTest {
     @Test
     public void getTableData_should_handleArrayWithNullEntries() throws Exception {
         mockTrinoClient.setResponsePages(List.of(
-            //language=json
-            """
-            {
-                "id": "fake-req-1",
-                "nextUri": "http://example.com/fake-req-2"
-            }
-            """,
-            //language=json
-            """
-            {
-                "id": "fake-req-1",
-                "columns": [
+                //language=json
+                """
                     {
-                        "name": "col1",
-                        "typeSignature": {
-                            "arguments": [
-                                {
-                                    "value": {
-                                        "rawType": "string"
-                                    }
-                                }
-                            ],
-                            "rawType": "array"
-                        }
+                        "id": "fake-req-1",
+                        "nextUri": "http://example.com/fake-req-2"
                     }
-                ],
-                "data": [
-                    [[ "a", "b", null, "a", null ]]
-                ]
-            }
-            """
+                """,
+                //language=json
+                """
+                    {
+                        "id": "fake-req-1",
+                        "columns": [
+                            {
+                                "name": "col1",
+                                "typeSignature": {
+                                    "arguments": [
+                                        {
+                                            "value": {
+                                                "rawType": "string"
+                                            }
+                                        }
+                                    ],
+                                    "rawType": "array"
+                                }
+                            }
+                        ],
+                        "data": [
+                            [[ "a", "b", null, "a", null ]]
+                        ]
+                    }
+                """
         ));
 
         // When I try to get table data
@@ -190,45 +217,45 @@ public class TrinoDataConnectAdapterTest {
 
         // Then
         assertThat("Ensure that the field is not empty",
-            (Collection<?>) tableData.getData().get(0).get("col1"), not(empty()));
+                (Collection<?>) tableData.getData().getFirst().get("col1"), not(empty()));
         assertThat("Ensure that null is included",
-            (Collection<?>) tableData.getData().get(0).get("col1"), containsInRelativeOrder("a", "b", null));
+                (Collection<?>) tableData.getData().getFirst().get("col1"), containsInRelativeOrder("a", "b", null));
     }
 
     @Test
     public void getTableData_should_handleNullArray() throws Exception {
         mockTrinoClient.setResponsePages(List.of(
-            //language=json
-            """
-            {
-                "id": "fake-req-1",
-                "nextUri": "http://example.com/fake-req-2"
-            }
-            """,
-            //language=json
-            """
-            {
-                "id": "fake-req-1",
-                "columns": [
+                //language=json
+                """
                     {
-                        "name": "col1",
-                        "typeSignature": {
-                            "arguments": [
-                                {
-                                    "value": {
-                                        "rawType": "string"
-                                    }
-                                }
-                            ],
-                            "rawType": "array"
-                        }
+                        "id": "fake-req-1",
+                        "nextUri": "http://example.com/fake-req-2"
                     }
-                ],
-                "data": [
-                    [null]
-                ]
-            }
-            """
+                """,
+                //language=json
+                """
+                    {
+                        "id": "fake-req-1",
+                        "columns": [
+                            {
+                                "name": "col1",
+                                "typeSignature": {
+                                    "arguments": [
+                                        {
+                                            "value": {
+                                                "rawType": "string"
+                                            }
+                                        }
+                                    ],
+                                    "rawType": "array"
+                                }
+                            }
+                        ],
+                        "data": [
+                            [null]
+                        ]
+                    }
+                """
         ));
 
         // When I try to get table data
@@ -237,30 +264,30 @@ public class TrinoDataConnectAdapterTest {
 
         // Then
         assertThat("Ensure that the field is null",
-            tableData.getData().get(0).get("col1"), Matchers.nullValue());
+                tableData.getData().getFirst().get("col1"), Matchers.nullValue());
     }
 
 
     @Test
     public void getTableData_should_includeDataModel_when_supplierProvidesOne_and_tableIsEmpty() throws Exception {
         mockTrinoClient.setResponsePages(List.of(
-            //language=json
-            """
-            {
-                "id": "fake-req-1",
-                "nextUri": "http://example.com/fake-req-2"
-            }
-            """,
-            //language=json
-            """
-            {
-                "id": "fake-req-1",
-                "columns": [
-                    { "name": "col1", "typeSignature": { "rawType": "varchar" } }
-                ],
-                "data": []
-            }
-            """
+                //language=json
+                """
+                    {
+                        "id": "fake-req-1",
+                        "nextUri": "http://example.com/fake-req-2"
+                    }
+                 """,
+                //language=json
+                """
+                    {
+                        "id": "fake-req-1",
+                        "columns": [
+                            { "name": "col1", "typeSignature": { "rawType": "varchar" } }
+                        ],
+                        "data": []
+                    }
+                """
         ));
 
         // When I try to get table data
@@ -279,22 +306,22 @@ public class TrinoDataConnectAdapterTest {
         mockTrinoClient.setResponsePages(List.of(
                 //language=json
                 """
-                {
-                    "id": "fake-req-1",
-                    "nextUri": "http://example.com/fake-req-2"
-                }
+                    {
+                        "id": "fake-req-1",
+                        "nextUri": "http://example.com/fake-req-2"
+                    }
                 """,
                 //language=json
                 """
-                {
-                    "id": "fake-req-1",
-                    "columns": [
-                        { "name": "col1", "typeSignature": { "rawType": "varchar" } }
-                    ],
-                    "data": [
-                        [ "val1" ]
-                    ]
-                }
+                    {
+                        "id": "fake-req-1",
+                        "columns": [
+                            { "name": "col1", "typeSignature": { "rawType": "varchar" } }
+                        ],
+                        "data": [
+                            [ "val1" ]
+                        ]
+                    }
                 """
         ));
 
@@ -314,23 +341,23 @@ public class TrinoDataConnectAdapterTest {
         mockTrinoClient.setResponsePages(List.of(
                 //language=json
                 """
-                {
-                    "id": "fake-req-1",
-                    "nextUri": "http://example.com/fake-req-2"
-                }
-                """,
+                        {
+                            "id": "fake-req-1",
+                            "nextUri": "http://example.com/fake-req-2"
+                        }
+                        """,
                 //language=json
                 """
-                {
-                    "id": "fake-req-1",
-                    "columns": [
-                        { "name": "col1", "typeSignature": { "rawType": "varchar" } }
-                    ],
-                    "data": [
-                        [ "val1" ]
-                    ]
-                }
-                """
+                        {
+                            "id": "fake-req-1",
+                            "columns": [
+                                { "name": "col1", "typeSignature": { "rawType": "varchar" } }
+                            ],
+                            "data": [
+                                [ "val1" ]
+                            ]
+                        }
+                        """
         ));
         fakeDataModel = null;
 
@@ -352,18 +379,18 @@ public class TrinoDataConnectAdapterTest {
         mockTrinoClient.setResponsePages(List.of(
                 //language=json
                 """
-                {
-                    "id": "fake-req-1",
-                    "nextUri": "http://example.com/fake-req-2"
-                }
-                """,
+                        {
+                            "id": "fake-req-1",
+                            "nextUri": "http://example.com/fake-req-2"
+                        }
+                        """,
                 //language=json
                 """
-                {
-                    "id": "fake-req-1",
-                    "data": []
-                }
-                """
+                        {
+                            "id": "fake-req-1",
+                            "data": []
+                        }
+                        """
         ));
         fakeDataModel = null;
 
@@ -383,21 +410,21 @@ public class TrinoDataConnectAdapterTest {
         mockTrinoClient.setResponsePages(List.of(
                 //language=json
                 """
-                {
-                    "id": "fake-req-1",
-                    "nextUri": "http://example.com/fake-req-2"
-                }
+                    {
+                        "id": "fake-req-1",
+                        "nextUri": "http://example.com/fake-req-2"
+                    }
                 """,
                 //language=json
                 """
-                {
-                    "id": "fake-req-1",
-                    "columns": [
-                        { "name": "col1", "typeSignature": { "rawType": "varchar" } }
-                    ],
-                    "data": []
-                }
-                """
+                    {
+                        "id": "fake-req-1",
+                        "columns": [
+                            { "name": "col1", "typeSignature": { "rawType": "varchar" } }
+                        ],
+                        "data": []
+                    }
+                 """
         ));
         fakeDataModel = null;
 
@@ -417,60 +444,60 @@ public class TrinoDataConnectAdapterTest {
         mockTrinoClient.setResponsePages(List.of(
                 //language=json
                 """
-                {
-                  "id" : "20241008_160203_00004_gexz2",
-                  "infoUri" : "https://localhost:8091/ui/query.html?20241008_160203_00004_gexz2",
-                  "nextUri" : null,
-                  "error" : {
-                    "failureInfo" : {
-                      "type" : "io.trino.spi.security.AccessDeniedException",
-                      "message" : "Access Denied: HTTP 401: The Token has expired on 2024-10-08T00:51:16Z.",
-                      "errorInfo" : {
-                        "code" : "4",
-                        "name" : "PERMISSION_DENIED",
-                        "type" : "USER_ERROR"
-                      },
-                      "cause" : null,
-                      "suppressed" : [ ],
-                      "stack" : [
-                        "com.dnastack.trino.plugin.PublisherSystemAccessControlFactory.lambda$create$0(PublisherSystemAccessControlFactory.java:163)",
-                        "jdk.proxy17/jdk.proxy17.$Proxy618.checkCanSelectFromColumns(Unknown Source)",
-                        "io.trino.security.AccessControlManager.lambda$checkCanSelectFromColumns$97(AccessControlManager.java:1098)",
-                        "io.trino.security.AccessControlManager.systemAuthorizationCheck(AccessControlManager.java:1490)",
-                        "io.trino.security.AccessControlManager.checkCanSelectFromColumns(AccessControlManager.java:1098)",
-                        "io.trino.security.ForwardingAccessControl.checkCanSelectFromColumns(ForwardingAccessControl.java:422)",
-                        "io.trino.tracing.TracingAccessControl.checkCanSelectFromColumns(TracingAccessControl.java:610)",
-                        "io.trino.sql.analyzer.Analyzer.lambda$analyze$0(Analyzer.java:104)",
-                        "java.base/java.util.LinkedHashMap.forEach(LinkedHashMap.java:986)",
-                        "io.trino.sql.analyzer.Analyzer.lambda$analyze$1(Analyzer.java:103)",
-                        "java.base/java.util.LinkedHashMap.forEach(LinkedHashMap.java:986)",
-                        "io.trino.sql.analyzer.Analyzer.analyze(Analyzer.java:102)",
-                        "io.trino.sql.analyzer.Analyzer.analyze(Analyzer.java:86)",
-                        "io.trino.execution.SqlQueryExecution.analyze(SqlQueryExecution.java:285)",
-                        "io.trino.execution.SqlQueryExecution.<init>(SqlQueryExecution.java:218)",
-                        "io.trino.execution.SqlQueryExecution$SqlQueryExecutionFactory.createQueryExecution(SqlQueryExecution.java:892)",
-                        "io.trino.dispatcher.LocalDispatchQueryFactory.lambda$createDispatchQuery$0(LocalDispatchQueryFactory.java:153)",
-                        "io.trino.$gen.Trino_445____20241008_160046_2.call(Unknown Source)",
-                        "com.google.common.util.concurrent.TrustedListenableFutureTask$TrustedFutureInterruptibleTask.runInterruptibly(TrustedListenableFutureTask.java:131)",
-                        "com.google.common.util.concurrent.InterruptibleTask.run(InterruptibleTask.java:76)",
-                        "com.google.common.util.concurrent.TrustedListenableFutureTask.run(TrustedListenableFutureTask.java:82)",
-                        "java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)",
-                        "java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)",
-                        "java.base/java.lang.Thread.run(Thread.java:1570)"
-                      ]
-                    },
-                    "message" : "Access Denied: HTTP 401: The Token has expired on 2024-10-08T00:51:16Z.",
-                    "errorCode" : 4,
-                    "errorName" : "PERMISSION_DENIED",
-                    "errorType" : "USER_ERROR"
-                  },
-                  "columns" : null,
-                  "data" : null,
-                  "stats" : {
-                    "state" : "FAILED"
-                  }
-                }
-                """
+                        {
+                          "id" : "20241008_160203_00004_gexz2",
+                          "infoUri" : "https://localhost:8091/ui/query.html?20241008_160203_00004_gexz2",
+                          "nextUri" : null,
+                          "error" : {
+                            "failureInfo" : {
+                              "type" : "io.trino.spi.security.AccessDeniedException",
+                              "message" : "Access Denied: HTTP 401: The Token has expired on 2024-10-08T00:51:16Z.",
+                              "errorInfo" : {
+                                "code" : "4",
+                                "name" : "PERMISSION_DENIED",
+                                "type" : "USER_ERROR"
+                              },
+                              "cause" : null,
+                              "suppressed" : [ ],
+                              "stack" : [
+                                "com.dnastack.trino.plugin.PublisherSystemAccessControlFactory.lambda$create$0(PublisherSystemAccessControlFactory.java:163)",
+                                "jdk.proxy17/jdk.proxy17.$Proxy618.checkCanSelectFromColumns(Unknown Source)",
+                                "io.trino.security.AccessControlManager.lambda$checkCanSelectFromColumns$97(AccessControlManager.java:1098)",
+                                "io.trino.security.AccessControlManager.systemAuthorizationCheck(AccessControlManager.java:1490)",
+                                "io.trino.security.AccessControlManager.checkCanSelectFromColumns(AccessControlManager.java:1098)",
+                                "io.trino.security.ForwardingAccessControl.checkCanSelectFromColumns(ForwardingAccessControl.java:422)",
+                                "io.trino.tracing.TracingAccessControl.checkCanSelectFromColumns(TracingAccessControl.java:610)",
+                                "io.trino.sql.analyzer.Analyzer.lambda$analyze$0(Analyzer.java:104)",
+                                "java.base/java.util.LinkedHashMap.forEach(LinkedHashMap.java:986)",
+                                "io.trino.sql.analyzer.Analyzer.lambda$analyze$1(Analyzer.java:103)",
+                                "java.base/java.util.LinkedHashMap.forEach(LinkedHashMap.java:986)",
+                                "io.trino.sql.analyzer.Analyzer.analyze(Analyzer.java:102)",
+                                "io.trino.sql.analyzer.Analyzer.analyze(Analyzer.java:86)",
+                                "io.trino.execution.SqlQueryExecution.analyze(SqlQueryExecution.java:285)",
+                                "io.trino.execution.SqlQueryExecution.<init>(SqlQueryExecution.java:218)",
+                                "io.trino.execution.SqlQueryExecution$SqlQueryExecutionFactory.createQueryExecution(SqlQueryExecution.java:892)",
+                                "io.trino.dispatcher.LocalDispatchQueryFactory.lambda$createDispatchQuery$0(LocalDispatchQueryFactory.java:153)",
+                                "io.trino.$gen.Trino_445____20241008_160046_2.call(Unknown Source)",
+                                "com.google.common.util.concurrent.TrustedListenableFutureTask$TrustedFutureInterruptibleTask.runInterruptibly(TrustedListenableFutureTask.java:131)",
+                                "com.google.common.util.concurrent.InterruptibleTask.run(InterruptibleTask.java:76)",
+                                "com.google.common.util.concurrent.TrustedListenableFutureTask.run(TrustedListenableFutureTask.java:82)",
+                                "java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)",
+                                "java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)",
+                                "java.base/java.lang.Thread.run(Thread.java:1570)"
+                              ]
+                            },
+                            "message" : "Access Denied: HTTP 401: The Token has expired on 2024-10-08T00:51:16Z.",
+                            "errorCode" : 4,
+                            "errorName" : "PERMISSION_DENIED",
+                            "errorType" : "USER_ERROR"
+                          },
+                          "columns" : null,
+                          "data" : null,
+                          "stats" : {
+                            "state" : "FAILED"
+                          }
+                        }
+                        """
         ));
         fakeDataModel = null;
 
@@ -486,5 +513,434 @@ public class TrinoDataConnectAdapterTest {
             // and the exception should contain the text of the underlying Trino error message
             assertThat(e.getMessage(), containsString("The Token has expired on 2024-10-08T00:51:16Z."));
         }
+    }
+
+    @Test
+    public void getTables_givenNoCatalogs_returnsEmptyList() {
+        mockTrinoClient.setResponsePages(List.of(
+                //language=json
+                """
+                        {
+                            "id": "catalog-req-1",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": []
+                        }
+                        """
+        ));
+
+        TablesList tablesList = dataConnectAdapter.getTables(new MockHttpServletRequest(), Map.of());
+
+        assertThat(tablesList.getTableInfos(), empty());
+        assertThat(tablesList.getPagination(), nullValue());
+        assertThat(tablesList.getIndex(), nullValue());
+    }
+
+
+    @Test
+    public void getTablesInCatalog_happyPath_firstCatalog() {
+        ApplicationConfig mockApplicationConfig = mock(ApplicationConfig.class);
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Set.of());
+
+        ReflectionTestUtils.setField(dataConnectAdapter, "applicationConfig", mockApplicationConfig);
+        String targetCatalog = "catalog1";
+        String nextCatalog = "catalog2";
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Set.of("hidden_cat")); // Ensure hidden filtering works
+
+        mockTrinoClient.setResponsePages(List.of(
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["catalog1"], ["catalog2"], ["hidden_cat"] ]
+                        }
+                        """,
+                // 2. Response for table query in targetCatalog ("catalog1")
+                //language=json
+                """
+                        {
+                            "id": "tables-req-cat1",
+                            "columns": [
+                                { "name": "table_catalog", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_schema", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_name", "typeSignature": { "rawType": "varchar" } }
+                            ],
+                            "data": [ ["catalog1", "schemaA", "tableA"] ],
+                            "stats": { "state": "FINISHED" }
+                        }
+                        """
+        ));
+
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+        Map<String, String> credentials = Map.of("X-Test", "cred");
+
+        TablesList tablesList = dataConnectAdapter.getTablesInCatalog(targetCatalog, request, credentials);
+
+        assertThat(tablesList.getTableInfos(), hasSize(1));
+        assertThat(tablesList.getTableInfos().getFirst().getName(), equalTo("catalog1.schemaA.tableA"));
+        assertNotNull(tablesList.getPagination());
+        assertNotNull(tablesList.getPagination().getNextPageUrl());
+
+        String expectedNextLink = getExpectedBaseUrl() + "/tables/catalog/" + nextCatalog;
+        assertThat(tablesList.getPagination().getNextPageUrl().toString(), equalTo(expectedNextLink));
+        assertNull(tablesList.getErrors());
+    }
+
+    @Test
+    public void getTablesInCatalog_happyPath_lastCatalog() {
+
+        String targetCatalog = "catalog1";
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet());
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Response for catalog query (only one catalog)
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["catalog1"] ]
+                        }
+                        """,
+                // 2. Response for table query in targetCatalog ("catalog1")
+                //language=json
+                """
+                        {
+                            "id": "tables-req-cat1",
+                            "columns": [
+                                 { "name": "table_catalog", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_schema", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_name", "typeSignature": { "rawType": "varchar" } }
+                            ],
+                            "data": [ ["catalog1", "schemaB", "tableB"] ],
+                            "stats": { "state": "FINISHED" }
+                        }
+                        """
+        ));
+
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+        Map<String, String> credentials = Map.of();
+
+        TablesList tablesList = dataConnectAdapter.getTablesInCatalog(targetCatalog, request, credentials);
+
+        assertThat(tablesList.getTableInfos(), hasSize(1));
+        assertThat(tablesList.getTableInfos().getFirst().getName(), equalTo("catalog1.schemaB.tableB"));
+
+        // No next catalog, so pagination should be null
+        assertNull("Pagination should be null for the last catalog", tablesList.getPagination());
+        assertNull(tablesList.getErrors());
+    }
+
+    @Test(expected = TrinoNoSuchCatalogException.class)
+    public void getTablesInCatalog_catalogNotFound() {
+
+        String targetCatalog = "nonexistent";
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet());
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Response for catalog query (doesn't contain targetCatalog)
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["other_catalog"] ]
+                        }
+                        """
+        ));
+
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+
+        dataConnectAdapter.getTablesInCatalog(targetCatalog, request, Map.of());
+    }
+
+    @Test(expected = TrinoNoSuchCatalogException.class)
+    public void getTablesInCatalog_targetCatalogIsHidden() {
+        String targetCatalog = "hidden_catalog";
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Set.of(targetCatalog.toLowerCase()));
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Response for catalog query (Trino returns it, but we hide it)
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["hidden_catalog"], ["visible_catalog"] ]
+                        }
+                        """
+        ));
+
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+
+        dataConnectAdapter.getTablesInCatalog(targetCatalog, request, Map.of());
+    }
+
+    @Test
+    public void getTablesByCatalogAndSchema_happyPath_firstSchema() {
+        String targetCatalog = "catalog1";
+        String targetSchema = "schemaA";
+        String nextSchema = "schemaB";
+        String nextCatalog = "catalog2"; // Exists but not needed for link in this case
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet());
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Catalog query
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["catalog1"], ["catalog2"] ]
+                        }
+                        """,
+                // 2. Schema query for targetCatalog ("catalog1")
+                //language=json
+                """
+                        {
+                            "id": "schema-req-cat1",
+                            "columns": [ { "name": "schema_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["schemaA"], ["schemaB"], ["information_schema"] ]
+                        }
+                        """,
+                // 3. Table query for targetCatalog.targetSchema ("catalog1"."schemaA")
+                //language=json
+                """
+                        {
+                            "id": "tables-req-cat1-schA",
+                             "columns": [
+                                { "name": "table_catalog", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_schema", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_name", "typeSignature": { "rawType": "varchar" } }
+                            ],
+                            "data": [ ["catalog1", "schemaA", "table1"] ],
+                            "stats": { "state": "FINISHED" }
+                        }
+                        """
+        ));
+
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+        Map<String, String> credentials = Map.of();
+
+        TablesList tablesList = dataConnectAdapter.getTablesByCatalogAndSchema(targetCatalog, targetSchema, request, credentials);
+
+        assertThat(tablesList.getTableInfos(), hasSize(1));
+        assertThat(tablesList.getTableInfos().getFirst().getName(), equalTo("catalog1.schemaA.table1"));
+        assertNotNull(tablesList.getPagination());
+        assertNotNull(tablesList.getPagination().getNextPageUrl());
+
+        String expectedNextLink = getExpectedBaseUrl() + "/tables/catalog/" + targetCatalog + "/schema/" + nextSchema;
+        assertThat(tablesList.getPagination().getNextPageUrl().toString(), equalTo(expectedNextLink));
+        assertNull(tablesList.getErrors());
+    }
+
+    @Test
+    public void getTablesByCatalogAndSchema_happyPath_lastSchemaInCatalog_moreCatalogs() {
+        // Arrange
+        String targetCatalog = "catalog1";
+        String targetSchema = "schemaA"; // The only schema in catalog1
+        String nextCatalog = "catalog2";
+        String firstSchemaInNextCatalog = "schemaC"; // Needed for link generation
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet());
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Consumed by: getTrinoCatalogs
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["catalog1"], ["catalog2"] ],
+                            "stats": { "state": "FINISHED" }
+                        }
+                        """,
+                // 2. Consumed by: getTrinoSchema("catalog1", ...)
+                //language=json
+                """
+                        {
+                            "id": "schema-req-cat1",
+                            "columns": [ { "name": "schema_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["schemaA"] ],
+                            "stats": { "state": "FINISHED" }
+                        }
+                        """,
+                // 3. Consumed by: getTrinoSchema("catalog2", ...) -- Called BEFORE table fetch in fixed logic
+                //language=json
+                """
+                        {
+                            "id": "schema-req-cat2",
+                            "columns": [ { "name": "schema_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["schemaC"], ["schemaD"] ],
+                            "stats": { "state": "FINISHED" }
+                        }
+                        """,
+                // 4. Consumed by: searchAll for tables in catalog1.schemaA -- Called LAST
+                //language=json
+                """
+                        {
+                            "id": "tables-req-cat1-schA",
+                             "columns": [
+                                { "name": "table_catalog", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_schema", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_name", "typeSignature": { "rawType": "varchar" } }
+                            ],
+                            "data": [ ["catalog1", "schemaA", "table1"] ],
+                            "stats": { "state": "FINISHED" }
+                        }
+                        """
+        ));
+
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+
+        TablesList tablesList = dataConnectAdapter.getTablesByCatalogAndSchema(targetCatalog, targetSchema, request, Map.of());
+
+        // Assert
+        assertThat("Should return 1 table info based on mock data", tablesList.getTableInfos(), hasSize(1));
+        assertThat(tablesList.getTableInfos().getFirst().getName(), equalTo("catalog1.schemaA.table1"));
+        assertNotNull(tablesList.getPagination());
+        assertNotNull(tablesList.getPagination().getNextPageUrl());
+        String expectedNextLink = getExpectedBaseUrl() + "/tables/catalog/" + nextCatalog + "/schema/" + firstSchemaInNextCatalog;
+        assertThat(tablesList.getPagination().getNextPageUrl().toString(), equalTo(expectedNextLink));
+        assertNull(tablesList.getErrors());
+    }
+
+    @Test
+    public void getTablesByCatalogAndSchema_happyPath_lastSchema_lastCatalog() {
+
+        String targetCatalog = "catalog1";
+        String targetSchema = "schemaA"; // The only schema in the only catalog
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet());
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Catalog query
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["catalog1"] ]
+                        }
+                        """,
+                // 2. Schema query for targetCatalog ("catalog1")
+                //language=json
+                """
+                        {
+                            "id": "schema-req-cat1",
+                            "columns": [ { "name": "schema_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["schemaA"] ]
+                        }
+                        """,
+                // 3. Table query for targetCatalog.targetSchema ("catalog1"."schemaA")
+                //language=json
+                """
+                        {
+                            "id": "tables-req-cat1-schA",
+                             "columns": [
+                                { "name": "table_catalog", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_schema", "typeSignature": { "rawType": "varchar" } },
+                                { "name": "table_name", "typeSignature": { "rawType": "varchar" } }
+                            ],
+                            "data": [ ["catalog1", "schemaA", "table1"] ],
+                            "stats": { "state": "FINISHED" }
+                        }
+                        """
+        ));
+
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+
+
+        TablesList tablesList = dataConnectAdapter.getTablesByCatalogAndSchema(targetCatalog, targetSchema, request, Map.of());
+
+
+        assertThat(tablesList.getTableInfos(), hasSize(1));
+        assertNull("Pagination should be null for last schema of last catalog", tablesList.getPagination());
+        assertNull(tablesList.getError());
+    }
+
+    @Test(expected = TrinoNoSuchCatalogException.class)
+    public void getTablesByCatalogAndSchema_CatalogNotFound() {
+
+        String targetCatalog = "nonexistent";
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet());
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Response for catalog query (doesn't contain targetCatalog)
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["other_catalog"] ]
+                        }
+                        """
+        ));
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+
+        dataConnectAdapter.getTablesByCatalogAndSchema(targetCatalog, "anySchema", request, Map.of());
+    }
+
+
+    @Test(expected = TrinoNoSuchCatalogException.class)
+    public void getTablesByCatalogAndSchema_SchemaNotFound() {
+
+        String targetCatalog = "catalog1";
+        String targetSchema = "nonexistentSchema";
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet());
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Catalog query
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["catalog1"] ]
+                        }
+                        """,
+                // 2. Schema query for targetCatalog ("catalog1") - doesn't contain targetSchema
+                //language=json
+                """
+                        {
+                            "id": "schema-req-cat1",
+                            "columns": [ { "name": "schema_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["schemaA"], ["schemaB"] ]
+                        }
+                        """
+        ));
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+
+        dataConnectAdapter.getTablesByCatalogAndSchema(targetCatalog, targetSchema, request, Map.of());
+    }
+
+    @Test(expected = TrinoNoSuchCatalogException.class)
+    public void getTablesByCatalogAndSchema_InformationSchemaRequested() {
+
+        String targetCatalog = "catalog1";
+        String targetSchema = "information_schema";
+        when(mockApplicationConfig.getHiddenCatalogs()).thenReturn(Collections.emptySet());
+
+        mockTrinoClient.setResponsePages(List.of(
+                // 1. Catalog query
+                //language=json
+                """
+                        {
+                            "id": "catalog-req",
+                            "columns": [ { "name": "catalog_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["catalog1"] ]
+                        }
+                        """,
+                // 2. Schema query for targetCatalog ("catalog1") - contains information_schema, but it should be filtered
+                //language=json
+                """
+                        {
+                            "id": "schema-req-cat1",
+                            "columns": [ { "name": "schema_name", "typeSignature": { "rawType": "varchar" } } ],
+                            "data": [ ["schemaA"], ["information_schema"] ]
+                        }
+                        """
+        ));
+        MockHttpServletRequest request = createRequestWithForwardedHeaders();
+
+        dataConnectAdapter.getTablesByCatalogAndSchema(targetCatalog, targetSchema, request, Map.of());
     }
 }
